--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,6 @@
   "imports": {
     "Logger": "jsr:@deno-lib/logger@^1.1.6",
     "MuxAsyncIterator": "jsr:@std/async/mux-async-iterator",
-    "Cliffy": "https://deno.land/x/cliffy@v1.0.0-rc.4/command/mod.ts"
+    "Cliffy": "jsr:@cliffy/command@^1.0.0-rc.4"
   }
 }
